--- a/games/airplane.css
+++ b/games/airplane.css
@@ -18,13 +18,14 @@ body {
 
 #player {
   position: absolute;
-  width: 40px;
-  height: 40px;
-  background: skyblue;
+  font-size: 2em;
   bottom: 10px;
   left: 180px;
-  border-radius: 5px;
+  width: 40px;
+  height: 40px;
+  text-align: center;
 }
+
 
 .enemy {
   position: absolute;
