--- a/style.css
+++ b/style.css
@@ -65,6 +65,28 @@ h1 {
   background: #666;
 }
 
+.about-section {
+  max-width: 600px;
+  margin: 0 auto;
+  text-align: left;
+  padding: 20px;
+}
+
+.about-section ul {
+  list-style: disc;
+  padding-left: 20px;
+  text-align: left;
+}
+
+.back-link {
+  display: inline-block;
+  margin-top: 30px;
+  color: #4cafef;
+  text-decoration: none;
+  font-weight: bold;
+}
+
+
 #status {
   margin-top: 10px;
   font-weight: bold;
